--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
     "@prisma/client": "^6.11.1",
+    "@supabase/supabase-js": "^2.50.5",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "prisma": "^6.11.1",
