fix: update seed script to CommonJS for ts-node compatibility and simplify seed command

--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@supabase/mcp-server-supabase": "^0.4.5",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "zod-to-json-schema": "^3.24.6"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
