--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@clerk/nextjs": "^6.24.0",
     "@prisma/client": "^6.11.1",
     "@supabase/supabase-js": "^2.50.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,6 +32,7 @@
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "zod-to-json-schema": "^3.24.6"
   },
