--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:seed": "prisma db seed",
+    "db:reset": "prisma migrate reset --force",
+    "db:push": "prisma db push",
+    "rls:apply": "node scripts/apply-rls-policies.js",
+    "rls:test": "node scripts/test-rls-policies.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
-    "@prisma/client": "^6.11.1",
+    "@prisma/client": "^6.12.0",
     "@supabase/supabase-js": "^2.50.5",
+    "dotenv": "^17.2.0",
+    "dotenv-cli": "^8.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
-    "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -22,12 +28,18 @@
     "@eslint/eslintrc": "^3",
     "@supabase/mcp-server-supabase": "^0.4.5",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.19.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "jest": "^30.0.4",
+    "prisma": "^6.12.0",
+    "supertest": "^7.1.3",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "zod-to-json-schema": "^3.24.6"
